# Maaktnietuit2

./: CMakeLists.txt
src/: Baan.cpp  Baan.h  MainTest.cpp  Utility.h  Verkeerslicht.h  Verkeerssituatie.cpp  Verkeerssituatie.h  Voertuig.cpp  Voertuig.h
src/parsers/: Verkeersparser.h  parseBanen.h  parseVerkeerslicht.h  parseVoertuigen.h  parser.cpp  parser.h
